# marko-math

./: .gitignore  0changelog.txt  CMakeLists.txt  CMakePresets.json  README.md  build.sh  todo.txt  vcpkg.json
include/: HasOperatorsC.hpp  concepts.hpp  macros.hpp
include/Float/: add.hpp  divide.hpp  eq.hpp  multiply.hpp  sub.hpp
include/Matrix/: eq.hpp  insertInto.hpp  invert.hpp  multiply.hpp  new_Identity.hpp  new_OrthographicProjection.hpp  new_PerspectiveProjection.hpp  new_Rotation.hpp  new_Scale.hpp  new_Translation.hpp  transpose.hpp  zeroOutElems.hpp
include/Matrix_Vec3/: multiply.hpp
include/Vec3/: add.hpp  cross.hpp  distance.hpp  divide.hpp  dot.hpp  eq.hpp  insertInto.hpp  magnitude.hpp  multiply.hpp  normalized.hpp  sub.hpp  vecOp.hpp  vecOp2.hpp
src/Matrix/: invert.cpp  multiply.cpp  new_Identity.cpp  new_OrthographicProjection.cpp  new_PerspectiveProjection.cpp  new_Rotation.cpp  new_Scale.cpp  new_Translation.cpp
src/Matrix_Vec3/: multiply.cpp
tests/: tests.cpp
